--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-react-views": "^0.11.0",
     "mongoose": "^7.4.4",
     "react": "^18.2.0",
